tests/ui/fail/python_power_operator.stderr
error: Potentially invalid expansion. Expected an identifier, if.
 --> tests/ui/fail/python_power_operator.rs:5:14
  |
5 |         $e * *$e
  |              ^
